# sfp

./: .gitignore  FIXES.md  README.md  SFP_API_REFERENCE.md  SFP_FEATURES.md  SFP_TEST_COVERAGE_REPORT.md  pyproject.toml  sfp.spec  sfp_gui.py
examples/: 01_basic_field.py  02_streaming_learning.py  03_attractor_query.py  04_agent_communication.py  05_storage_and_input.py
src/sfp/: __init__.py  __main__.py  bridge.py  config.py  exceptions.py  hardware.py  interface.py  types.py
src/sfp/affect/: __init__.py  valence.py
src/sfp/attention/: __init__.py  salience.py
src/sfp/comms/: __init__.py  compression.py  layers.py  negotiation.py  protocol.py  sync.py
src/sfp/core/: __init__.py  attractors.py  backbone.py  field.py  forgetting.py  lora.py  perceiver.py  streaming.py
src/sfp/defense/: __init__.py  anchor_verification.py  gradient_bounds.py  input_validation.py  surprise_hardening.py  topology_monitor.py
src/sfp/goals/: __init__.py  persistence.py
src/sfp/gui/: __init__.py  app.py  config_panel.py  goals_panel.py  log_panel.py  presets.py  session.py  settings.py  status_panel.py  worker.py
src/sfp/input/: __init__.py  adapters.py  bytelevel.py  encoder.py  projection.py  registry.py  token_types.py
src/sfp/memory/: __init__.py  consolidation.py  core.py  episodic.py  essential.py  events.py  replay.py  (+2 more)
tests/: conftest.py
tests/integration/: test_co_adaptation.py  test_end_to_end.py  test_feedback_loops.py  test_learning_validation.py  test_tier_communication.py  test_wm_heads.py
tests/sustainability/: test_learning_efficacy.py  test_long_term.py
(+75 files in other folders)
